// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation dropdown should render correctly 1`] = `
.c7 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c2 {
  color: #fff;
  fill: currentColor;
}

.c0 {
  background-color: #222222;
  width: 100vw;
}

.c1 {
  background-color: #222222;
  width: 2.75rem;
  height: 2.75rem;
  padding: 0;
  margin: 0;
  border: 0;
}

.c1:hover,
.c1:focus {
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
  cursor: pointer;
}

.c3 {
  list-style-type: none;
  margin: 0;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.c4 {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  border-bottom: 0.0625rem solid #3F3F42;
}

.c4:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.c5 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
}

.c5:hover,
.c5:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

.c6 {
  border-left: 0.25rem solid #FFFFFF;
  padding-left: 0.5rem;
}

@media (min-width:37.5rem) {
  .c0 {
    display: none;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<div
  class="c0"
>
  <button
    class="c1"
  >
    <svg
      class="c2"
      height="44px"
      width="44px"
    >
      <path
        d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
  <ul
    class="c3"
  >
    <li
      class="c4"
      role="listitem"
    >
      <a
        class="c5"
      >
        <span
          class="c6"
          dir="ltr"
        >
          <span
            class="c7"
          >
            Current page
            , 
          </span>
          Home
        </span>
      </a>
    </li>
    <li
      class="c4"
      role="listitem"
    >
      <a
        class="c5"
      >
        Nigeria
      </a>
    </li>
    <li
      class="c4"
      role="listitem"
    >
      <a
        class="c5"
      >
        Africa
      </a>
    </li>
    <li
      class="c4"
      role="listitem"
    >
      <a
        class="c5"
      >
        World
      </a>
    </li>
    <li
      class="c4"
      role="listitem"
    >
      <a
        class="c5"
      >
        Video
      </a>
    </li>
    <li
      class="c4"
      role="listitem"
    >
      <a
        class="c5"
      >
        Audio
      </a>
    </li>
    <li
      class="c4"
      role="listitem"
    >
      <a
        class="c5"
      >
        Sport
      </a>
    </li>
    <li
      class="c4"
      role="listitem"
    >
      <a
        class="c5"
      >
        Entertainment
      </a>
    </li>
    <li
      class="c4"
      role="listitem"
    >
      <a
        class="c5"
      >
        Most popular
      </a>
    </li>
  </ul>
</div>
`;

exports[`Navigation should render correctly 1`] = `
.c7 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c1 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.c2 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
  overflow: hidden;
}

.c4 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

.c4::after {
  content: '';
  position: absolute;
  bottom: 0;
  width: 80rem;
  border-bottom: 0.0625rem solid #eab3b3;
  z-index: -1;
}

.c5 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 1rem;
}

.c5:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.c5:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.c8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 1rem;
}

.c8:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.c8:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.c6::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.c0 {
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.c0 .c3::after {
  left: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:24.9375rem) {
  .c5 {
    padding: 0.75rem 0.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:24.9375rem) {
  .c8 {
    padding: 0.75rem 0.5rem;
  }
}

<nav
  class="c0"
  dir="ltr"
  role="navigation"
>
  <div
    class="c1"
  >
    <ul
      class="c2"
      role="list"
    >
      <li
        class="c3 c4"
        role="listitem"
      >
        <a
          class="c5"
          data-navigation="test_navigation"
          href="/igbo"
        >
          <span
            class="c6"
            role="text"
          >
            <span
              class="c7"
            >
              Current page
              , 
            </span>
            Akụkọ
          </span>
        </a>
      </li>
      <li
        class="c3 c4"
        role="listitem"
      >
        <a
          class="c8"
          data-navigation="test_navigation"
          href="/igbo/egwuregwu"
        >
          Egwuregwu
        </a>
      </li>
      <li
        class="c3 c4"
        role="listitem"
      >
        <a
          class="c8"
          data-navigation="test_navigation"
          href="/igbo/media/video"
        >
          Ihe nkiri
        </a>
      </li>
      <li
        class="c3 c4"
        role="listitem"
      >
        <a
          class="c8"
          data-navigation="test_navigation"
          href="/igbo/popular/read"
        >
          Nke ka ewuewu
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
